--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,7 @@
     "margin": "0",
     "downscalePercent": 100
   },
-  "showInlineTitle": false
+  "showInlineTitle": false,
+  "alwaysUpdateLinks": true,
+  "promptDelete": false
 }
